Final changes
Changes made for the presentation but forgot to commit previously